# Copyright 2023 RobustMQ Team
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "src/common/base",
    "src/placement-center",
    "src/cmd",
    "src/protocol",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.19"
log = "0.4.0"
log4rs = "1.2.0"
thiserror = "1.0.63"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tonic-build = "0.12.1"
tonic = "0.12.1"
dashmap = "6.0.1"
prost = "0.13.1"
rocksdb = "0.22.0"
bincode = "1.3.3"

## workspaces members
placement-center = { path = "src/placement-center" }
cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
common-base = { path = "src/common/base" }

