# Copyright 2023 RobustMQ Team
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name = "placement-center"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
log.workspace = true
serde.workspace = true
log4rs.workspace = true
axum.workspace = true
common-base.workspace = true
tokio.workspace = true
tonic.workspace = true
tokio-util.workspace = true
protocol.workspace = true
dashmap.workspace = true
serde_json.workspace = true
rocksdb.workspace = true
raft = { git = "https://github.com/robustmq/raft-rs",  features = ["prost-codec"], default-features = false }
prost = "0.12.3"
bincode.workspace = true
slog = "2"
slog-term = "2.9.0"
slog-async = "2.8.0"
